# agentic-todolist

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: api_keys.py  auth.py  calendar.py  llm.py  tasks.py  timeline.py
backend/app/api/v1/: health.py
backend/app/config/: settings.py
backend/app/database/: models.py
backend/app/domains/: __init__.py
backend/app/domains/auth/: __init__.py  google_oauth_service.py  models.py  repository.py  service.py
backend/app/domains/calendar/: __init__.py  models.py  repository.py  service.py  user_service.py
backend/app/domains/llm/: __init__.py  encryption.py  models.py  repository.py  service.py
backend/app/domains/task/: google_task_service.py  models.py  repository.py  service.py
backend/app/infrastructure/: __init__.py  auth_repository.py  llm_repository.py
backend/app/providers/: base.py  factory.py  gemini.py  openai.py
backend/app/schemas/: __init__.py  events.py  health.py
backend/app/services/: auth_service.py  calendar_service.py  google_oauth_service.py  llm_service.py  user_calendar_service.py
backend/app/utils/: logging.py
frontend/: biome.jsonc  components.json  index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/pages/app/: index.tsx
frontend/src/pages/landing/: index.tsx
frontend/src/pages/login/: index.tsx
frontend/src/shared/components/: header.tsx
frontend/src/shared/hooks/: use-auth.ts  use-mobile.ts
scripts/: run_ruff.py
(+58 files in other folders)
